--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngrx/store": "^16.0.1",
     "bootstrap": "^3.4.1",
     "firebase": "^9.22.2",
     "rxjs": "^6.6.7",
